updating database configuration

--- a/config/database.yml
+++ b/config/database.yml
@@ -11,3 +11,9 @@ development:
 test:
   <<: *default
   database: rails-watch-list_test
+
+production:
+  <<: *default
+  database: rails-watch-list_production
+  username: rails-watch-list
+  password: <%= ENV['RAILS-WATCH-LIST_DATABASE_PASSWORD'] %>
